# typstar

./: .gitignore  .luarc.json  CHANGELOG.md  README.md  flake.nix  justfile  pyproject.toml
lua/tests/: basic_init.lua  helper.lua  nvim_wrapper.sh  test_main.lua
lua/tests/snippets/: auto-align.lua  letters.lua  markup.lua  math.lua  matrix.lua  treesitter.lua  visual.lua
lua/typstar/: autosnippets.lua  config.lua  drawings.lua  engine.lua  init.lua  utils.lua
lua/typstar/snippets/: auto-align.lua  letters.lua  markup.lua  math.lua  matrix.lua  theorems.lua  visual.lua
res/: rnote_template.rnote
res/lazy/: lazy.sh
src/anki/: flashcard.py  main.py  parser.py
tests/: basic_init.lua  test_main.lua
