[project]
name = "typstar"
version = "1.5.1"
description = "Neovim plugin for efficient note taking in Typst"
authors = [
    { name = "arne314" }
]
readme = "README.md"
requires-python = ">=3.11.10"
dependencies = [
    "aiohttp>=3.13.3",
    "appdirs>=1.4.4",
    "tree-sitter-language-pack==1.8.1",
    "tree-sitter==0.25.2",
    "typer>=0.24.1",
    "typing-extensions>=4.15.0",
]

[project.scripts]
typstar-anki = "anki.main:main"

[tool.ruff]
lint.extend-select = ["I"]
line-length = 100

[dependency-groups]
dev = [
    "ruff>=0.8.5",
]

[build-system]
requires = ["uv_build>=0.11.2,<0.12"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "anki"

